[gd_scene load_steps=2 format=3 uid="uid://test_battle_001"]

[ext_resource type="Script" path="res://scenes/TestBattle.gd" id="1"]

[node name="TestBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.25, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "テスト戦闘"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PartyPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PartyPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PartyPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "味方パーティ"
horizontal_alignment = 1

[node name="PartyInfo" type="Label" parent="VBoxContainer/HBoxContainer/PartyPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
text = "パーティ情報"

[node name="LogPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/LogPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/LogPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "戦闘ログ"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/LogPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="LogText" type="Label" parent="VBoxContainer/HBoxContainer/LogPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
text = "戦闘ログがここに表示されます"
autowrap_mode = 3

[node name="EnemyPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/EnemyPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/EnemyPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "敵"
horizontal_alignment = 1

[node name="EnemyInfo" type="Label" parent="VBoxContainer/HBoxContainer/EnemyPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
text = "敵情報"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="NextTurnButton" type="Button" parent="VBoxContainer/ButtonPanel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "次のターン"

[node name="AutoButton" type="Button" parent="VBoxContainer/ButtonPanel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "自動戦闘"

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonPanel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "タイトルに戻る"
